--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,9 @@ services:
       POSTGRES_USER: prefect
       POSTGRES_PASSWORD: prefect
       POSTGRES_DB: prefect
+      BK_PASSWORD: kevin0105
+      DEVELOPER_PASSWORD: "0000"
+      PREFECT_PASSWORD: prefect
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/initdb:/docker-entrypoint-initdb.d
@@ -35,6 +38,7 @@ services:
         condition: service_healthy
     environment:
       PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgres:5432/prefect
+      # PREFECT_UI_URL: http://100.126.39.42:4200/api
       PREFECT_SERVER_API_HOST: 0.0.0.0
       PREFECT_MESSAGING_BROKER: prefect_redis.messaging
       PREFECT_MESSAGING_CACHE: prefect_redis.messaging
@@ -83,25 +87,25 @@ services:
       - ./prefect/flows:/opt/flows
       - ./shared:/opt/shared
 
-  # fastapi:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #     prefect-server:
-  #       condition: service_healthy
-  #   environment:
-  #     DATABASE_URL: postgresql://prefect:prefect@postgres:5432/prefect
-  #     PREFECT_API_URL: http://prefect-server:4200/api
-  #     REDIS_URL: redis://redis:6379/0
-  #   ports:
-  #     - "8000:8000"
-  #   volumes:
-  #     - ./backend/app:/app/app
-  #     - ./shared:/app/shared
-  #   command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+  fastapi:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    depends_on:
+      postgres:
+        condition: service_healthy
+      prefect-server:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://prefect:prefect@postgres:5432/prefect
+      PREFECT_API_URL: http://prefect-server:4200/api
+      REDIS_URL: redis://redis:6379/0
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend/app:/app/app
+      - ./shared:/app/shared
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
   postgres_data: 
