--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,29 @@
 services:
-  postgres:
-    image: postgis/postgis:16-3.4
-    environment:
-      POSTGRES_USER: prefect
-      POSTGRES_PASSWORD: prefect
-      POSTGRES_DB: prefect
-      BK_PASSWORD: kevin0105
-      DEVELOPER_PASSWORD: "0000"
-      PREFECT_PASSWORD: prefect
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: always
+    ports:
+      - "4200:4200"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./database/initdb:/docker-entrypoint-initdb.d
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - prefect-server
+    networks:
+      - prefect_network
+
+  postgis:
+    image: postgis/postgis:16-3.4
+    container_name: postgis
+    environment:
+      - POSTGRES_USER=prefect
+      - POSTGRES_PASSWORD=prefect
+      - POSTGRES_DB=prefect
+      - DEVELOPER_PASSWORD=${DEVELOPER_PASSWORD}
+      - READONLY_PASSWORD=${READONLY_PASSWORD}
+    volumes:
+      - postgis_data:/var/lib/postgresql/data
+      - ./docker/db-init-scripts/init.sh:/docker-entrypoint-initdb.d/init.sh
     ports:
       - "5432:5432"
     healthcheck:
@@ -18,6 +31,9 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - prefect_network
+      - data_network
 
   redis:
     image: redis:7
@@ -28,26 +44,34 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - prefect_network
+      - data_network
 
   prefect-server:
     image: prefecthq/prefect:3-latest
+    container_name: prefect_server
     depends_on:
-      postgres:
+      postgis:
         condition: service_healthy
       redis:
         condition: service_healthy
     environment:
-      PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgres:5432/prefect
-      # PREFECT_UI_URL: http://100.126.39.42:4200/api
+      PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgis:5432/prefect
       PREFECT_SERVER_API_HOST: 0.0.0.0
       PREFECT_MESSAGING_BROKER: prefect_redis.messaging
       PREFECT_MESSAGING_CACHE: prefect_redis.messaging
       PREFECT_REDIS_MESSAGING_HOST: redis
       PREFECT_REDIS_MESSAGING_PORT: 6379
       PREFECT_REDIS_MESSAGING_DB: 0
-    command: prefect server start --no-services
-    ports:
-      - "4200:4200"
+    # command: prefect server start --no-services
+    command: prefect server start --host 0.0.0.0
+    volumes:
+      - prefect_home:/root/.prefect
+    networks:
+      - prefect_network
+    # ports:
+    #   - "4200:4200"
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request as u; u.urlopen('http://localhost:4200/api/health', timeout=1)"]
       interval: 30s
@@ -61,52 +85,83 @@ services:
       prefect-server:
         condition: service_healthy
     environment:
-      PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgres:5432/prefect
+      PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgis:5432/prefect
       PREFECT_MESSAGING_BROKER: prefect_redis.messaging
       PREFECT_MESSAGING_CACHE: prefect_redis.messaging
       PREFECT_REDIS_MESSAGING_HOST: redis
       PREFECT_REDIS_MESSAGING_PORT: 6379
       PREFECT_REDIS_MESSAGING_DB: 0
     command: prefect server services start
+    networks:
+      - prefect_network
 
   prefect-worker:
     build:
-      context: ./prefect
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/flows_package/Dockerfile
     depends_on:
       prefect-server:
         condition: service_healthy
-      postgres:
+      postgis:
         condition: service_healthy
     environment:
       PREFECT_API_URL: http://prefect-server:4200/api
-      DATABASE_URL: postgresql://prefect:prefect@postgres:5432/prefect
-    command: prefect worker start --pool local-pool
+      DATABASE_URL: postgresql://developer:${DEVELOPER_PASSWORD}@postgis:5432/app
+    command:
+      - bash
+      - -c
+      - |
+        cd /opt/prefect-app
+        prefect deploy --all
+        cd flows
+        prefect work-pool create NOAA-pool --type process --overwrite
+        prefect work-pool create flight-pool --type process --overwrite
+        prefect worker start --pool NOAA-pool &
+        prefect worker start --pool flight-pool &
+        wait
     restart: on-failure
     volumes:
-      - ./prefect/flows:/opt/flows
+      - ./prefect:/opt/prefect-app
       - ./shared:/opt/shared
+      - ${PYOPENSKY_SETTINGS}:/root/.config/pyopensky/settings.conf
+    networks:
+      - prefect_network
+      - data_network
 
   fastapi:
     build:
       context: .
-      dockerfile: backend/Dockerfile
+      dockerfile: docker/api/Dockerfile
     depends_on:
-      postgres:
+      postgis:
         condition: service_healthy
       prefect-server:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://prefect:prefect@postgres:5432/prefect
       PREFECT_API_URL: http://prefect-server:4200/api
       REDIS_URL: redis://redis:6379/0
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/app:/app/app
-      - ./shared:/app/shared
+      - ./backend/api:/api
+      - ./shared:/api/shared
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - prefect_network
+      - data_network
+
 
 volumes:
-  postgres_data: 
+  prefect_home:
+    driver: local
+  postgis_data:
+    driver: local
   redis_data:
+    driver: local
+
+networks:
+  prefect_network:
+    driver: bridge
+  data_network:
+    driver: bridge
+    internal: true
