--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.12-slim
 
-WORKDIR /api
+WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -15,5 +16,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Expose port
 EXPOSE 8000
 
-# Run FastAPI application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Set Python path to include /app for shared module imports
+ENV PYTHONPATH=/app
+
+# Run FastAPI application (will be overridden if command is specified in docker-compose)
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
